# markdown-todo-extractor

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  ralph.sh
.beads/: issues.jsonl
.claude/: ralph-loop.local.md  settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
.tickets/: markdown-todo-extractor-29z.md  markdown-todo-extractor-2ko.md  markdown-todo-extractor-2m1.md  markdown-todo-extractor-35e.md  markdown-todo-extractor-40j.md  markdown-todo-extractor-4ia.md  markdown-todo-extractor-5i0.md  markdown-todo-extractor-6oq.md  markdown-todo-extractor-6uj.md  markdown-todo-extractor-718.md  markdown-todo-extractor-7i7.md  markdown-todo-extractor-84a.md  markdown-todo-extractor-92i.md  markdown-todo-extractor-98n.md  markdown-todo-extractor-afx.md  markdown-todo-extractor-b68.md  markdown-todo-extractor-cpb.md  markdown-todo-extractor-i6y.md  markdown-todo-extractor-ie0.md  markdown-todo-extractor-j56.md  markdown-todo-extractor-sdi.md  markdown-todo-extractor-thw.md  markdown-todo-extractor-tx9.2.md  markdown-todo-extractor-tx9.3.md  markdown-todo-extractor-tx9.4.md  markdown-todo-extractor-tx9.5.md  markdown-todo-extractor-tx9.md  markdown-todo-extractor-v0k.md  markdown-todo-extractor-ved.md  markdown-todo-extractor-vw9.md  markdown-todo-extractor-zxt.md
src/: cli.rs  cli_router.rs  config.rs  extractor.rs  filter.rs  http_router.rs  main.rs  mcp.rs  operation.rs  outline_extractor.rs  tag_extractor.rs
src/capabilities/: daily_notes.rs  files.rs  mod.rs  outline.rs  tags.rs  tasks.rs
src/capabilities/daily_notes/: pattern.rs
