[package]
name = "markdown-todo-extractor"
version = "0.1.0"
edition = "2021"
description = "Extractor to extract information about todo items from markdown files"
repository = "https://github.com/jeffutter/markdown-todo-extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
markdown = "1.0.0"
mimalloc = { version = "0.1.39" }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.3", features = ["server", "transport-io"] }
schemars = "1.0"

[profile.release]
lto = true
codegen-units = 1
