[package]
name = "markdown-todo-extractor"
version = "0.4.2"
edition = "2024"
description = "Extractor to extract information about todo items from markdown files"
repository = "https://github.com/jeffutter/markdown-todo-extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
markdown = "1.0.0"
mimalloc = { version = "0.1.39" }
rayon = "1.10"
regex = { version = "1.10", features = ["perf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
simdutf8 = "0.1"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.10", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
axum = "0.8"

[profile.release]
lto = true
codegen-units = 1
